style(XOBoard): replace 'gap' property with margin for compatibility issues on old Safari browsers

--- a/src/components/XOGame/XOBoard/BoardRow/BoardRow.module.scss
+++ b/src/components/XOGame/XOBoard/BoardRow/BoardRow.module.scss
@@ -3,11 +3,4 @@
 .row {
   display: flex;
   align-items: center;
-  gap: 6px;
-}
-
-@include m.medium {
-  .row {
-    gap: 4px;
-  }
 }
